# cogzy-ai

./: .eslintrc.js  LICENSE  README.md  package.json  tsconfig.json  turbo.json
apps/api/: .gitignore  package.json  pyproject.toml  tsconfig.json
apps/api/app/: main.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: auth.py
apps/api/src/: app.module.ts  main.ts
apps/api/src/config/: env.schema.ts
apps/api/src/database/: database.module.ts  database.service.ts
apps/api/src/health/: health.controller.ts  health.service.ts
apps/web/: components.json  eslint.config.js  next.config.mjs  package.json  postcss.config.mjs  tsconfig.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/(app)/: layout.tsx
apps/web/app/(app)/dashboard/: page.tsx
apps/web/app/(app)/workspace/: page.tsx
apps/web/app/(auth)/: layout.tsx
apps/web/app/(auth)/_components/: signin-form.tsx  signup-form.tsx
apps/web/app/(auth)/onboard/: page.tsx
apps/web/app/(auth)/signin/: page.tsx
apps/web/app/(auth)/signup/: page.tsx
apps/web/app/(landing)/: layout.tsx  page.tsx
apps/web/app/(landing)/_components/: features.tsx
apps/web/app/fonts/: index.ts
apps/web/components/: logo.tsx
apps/web/components/layouts/navigation/: navbar.tsx
apps/web/components/layouts/sidebar/: app-sidebar.tsx  nav-main.tsx  (+3 more)
apps/web/constants/: site.ts  workspace.ts
apps/web/lib/: action.ts  auth-client.ts  auth.ts
apps/web/server/: auth.ts  organization.ts  workspace-members.ts  workspace.ts
apps/web/types/: user.ts  workspace.ts
(+7 files in other folders)
